--- a/src/index.css
+++ b/src/index.css
@@ -138,11 +138,11 @@ footer {
   width: 85%;
 }
 
-#journal {
+#goals {
   margin-bottom: 24px;
 }
 
-.journal-input {
+.goals-input {
   width: 100%;
   padding-top: 4px;
   display: block;
