Minor styling tweaks

--- a/src/App.css
+++ b/src/App.css
@@ -19,17 +19,20 @@ button {
   object-fit: cover;
   width: 100%;
   min-height: 100%;
-  transform: scale(1.5);
-  filter: brightness(0.5) blur(5px);
 }
 
 body {
   color: white;
 }
 
-.temperature {
+.location {
   font-size: 32px;
   padding-top: 28px;
+}
+
+.temperature {
+  font-size: 32px;
+  padding-top: 8px;
 }
 
 .temperature-container {
